# Financial_Functions

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  Test_Error_Messages.txt  duckdb_financial_extension.html  duckdb_financial_extension.qmd  extension_config.cmake  fin_functions.duckdb_extension  financial_functions.duckdb_extension  publishing_duckdb_extension.html  publishing_duckdb_extension.qmd  run_tests.ps1  vcpkg.json
.github/workflows/: extension-ci.yml  release.yml
files/: annuity.rs  bonds.rs  cash_flows.rs  coupons.rs  depreciation.rs  helpers.rs  misc.rs
publishing_duckdb_extension_files/libs/bootstrap/: bootstrap-e973efa9006a3106c1cc9d4751b5f2e3.min.css
src/: annuity.rs  bonds.rs  cash_flows.rs  coupons.rs  depreciation.rs  errors.rs  helpers.rs  lib.rs  misc.rs
test/: annuity.test  cash_flows.test  other_functions.test  robustness.test
test/logs/: test_results_2026-04-27_06-38-27.txt  test_results_2026-04-27_06-52-15.txt  test_results_2026-04-27_06-57-38.txt  test_results_2026-04-27_07-00-11.txt  test_results_2026-04-27_07-02-36.txt  test_results_2026-04-27_07-04-05.txt  test_results_2026-04-27_07-06-06.txt  test_results_2026-04-27_07-06-36.txt  test_results_2026-04-27_07-21-54.txt  test_results_2026-04-27_07-22-58.txt  test_results_2026-04-27_08-07-50.txt  test_results_2026-05-09_06-50-03.txt  test_results_2026-05-09_06-58-16.txt
test/sql/: financial_functions.test
