[package]
name = "financial_functions"
version = "0.1.0"
edition = "2024"

[dependencies]
# Update these versions to match the 1.105xx series
duckdb = { version = "1.10501.0", features = ["vtab-loadable", "vscalar"] }
duckdb-ext-macros = "0.1.0"
duckdb-loadable-macros = "1.10501.0"
libduckdb-sys = { version = "1.10501.0", features = ["loadable-extension"] }
financial = "1.1.5"
chrono = "0.4"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto           = true
strip         = true
opt-level     = 3
codegen-units = 1
panic         = "abort"
